# darash

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
backend/: .air.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  bible_books.go  bible_ref.go  db.go  (+29 more)
ingest/: .pre-commit-config.yaml  main.py  main_morphgnt.py  main_tahot.py  main_tbesg.py  main_tbesh.py  pyproject.toml
ingest/morphgnt/: parser.py
ingest/scripts/morphgnt-tbesg-alignment/: aligned_words.csv  export-unaligned-words.sh  missing_alignments.sql  morphgnt_tbesg_missing_alignments.csv  unaligned_words_morphgnt_tbesg.csv  unaligned_words_morphgnt_tbesg.xlsx
ingest/scripts/morphgnt-token-alignment/: validate.py
ingest/src/: data_sqlite.py
ingest/src/morphgnt/: db.py  fetch.py  paragraphs.py  parser.py  sqlite.py  stats.py  validate.py
ingest/src/tahot/: books.py  db.py  fetch.py  morphology.py  parser.py  sqlite.py  stats.py
ingest/src/tbesg/: aliases.py  db.py  fetch.py  parser.py  sqlite.py
ingest/src/tbesg/data/: aligned_forms.csv
ingest/src/tbesh/: fetch.py  parser.py  sqlite.py  validate.py
ingest/tests/: test_data_sqlite.py
ingest/tests/morphgnt/: test_ci_check.py  test_paragraphs.py  test_parser.py  test_sqlite.py  test_stats.py  test_validate.py
ingest/tests/tahot/: test_tahot_morphology.py  test_tahot_parser.py  test_tahot_sqlite.py  test_tahot_stats.py
ingest/tests/tbesg/: test_aliases.py  test_tbesg_parser.py  test_tbesg_sqlite.py
ingest/tests/tbesh/: test_tbesh_parser.py  test_tbesh_sqlite.py  test_tbesh_validate.py
(+219 files in other folders)
